--- a/app.json
+++ b/app.json
@@ -16,8 +16,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/AM-ROBOTS/AM-ROBOTS",
-    "repository": "https://github.com/AM-ROBOTS/AM-ROBOTS",
+    "website": "https://github.com/Psychokiller-5/AutoAnura",
+    "repository": "https://github.com/Psychokiller-5/AutoAnura",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
